[metadata]
name = iplkp
description = "iplkp - Geo IP and RDAP lookup tool"
version = 0.0.1
url = "https://github.com/hernan-erasmo/iplkp"
author = "Hernán Erasmo"
author_email = "dherasmo@gmail.com"
maintainer = "Hernán Erasmo"
maintainer_email = "dherasmo@gmail.com"
license = "MIT License"

[options]
packages = find:

[options.entry_points]
console_scripts =
    iplkp = iplkp:main
